--- a/images.html
+++ b/images.html
@@ -17,12 +17,18 @@
         <a href="/" class="web_logo">
             <img src="logo.png" alt="logo">
         </a>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="activities.html">Activities</a></li>
-                <li><a href="images.html">Gallery</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-#black">
+        
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-item nav-link active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link" href="activities.html"><strong>Activities</strong></a>
+              <a class="nav-item nav-link" href="images.html"><strong>Gallery</strong></a>
+            </div>
+          </div>
         </nav>
     </header>
     <div class="container">
