--- a/index.html
+++ b/index.html
@@ -39,16 +39,28 @@
     <div class="aud"><audio src="Audio (2).mpeg" autoplay loop></audio></div>
     <!--Navs-->
     <header class="main-header">
-        <a href="/" class="web_logo">
-            <img src="logo.png" alt="logo">
-        </a>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html"><strong>Home</strong></a></li>
-                <li><a href="activities.html"><strong>Activities</strong></a></li>
-                <li><a href="images.html"><strong>Gallery</strong></a></li>
-            </ul>
-        </nav>
+      <a href="/" class="web_logo">
+        <img src="logo.png" alt="logo">
+    </a>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-#black">
+        
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="activities.html"><strong>Activities</strong></a>
+          <a class="nav-item nav-link" href="images.html"><strong>Gallery</strong></a>
+        </div>
+      </div>
+    </nav>
+
+
+
+
+
     </header> 
     <!--Main body-->
 <div class="row">
@@ -101,11 +113,11 @@
     <p>2. Diabetes Check</p>
     <p>3. Cholesterol Check</p>
     <p>4. Urine Test</p>
-    <p>5. Blood Tesy</p>
+    <p>5. Blood Test</p>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button type="button" class="btn btn-primary">Understood</button>
+    <button type="button" class="btn btn-primary" data-dismiss="modal">Understood</button>
   </div>
 </div>
 </div>
