change styles of navbar

--- a/images.html
+++ b/images.html
@@ -23,10 +23,10 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
-              <a class="nav-item nav-link" href="activities.html"><strong>Activities</strong></a>
-              <a class="nav-item nav-link" href="images.html"><strong>Gallery</strong></a>
+            <div class="navbar-nav bg-light-secondary">
+              <a class="nav-item nav-link text-center active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
+              <a class="nav-item nav-link text-center" href="activities.html"><strong>Activities</strong></a>
+              <a class="nav-item nav-link text-center" href="images.html"><strong>Gallery</strong></a>
             </div>
           </div>
         </nav>
