--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
         <img src="logo.png" alt="logo">
     </a>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-#black">
-        
+    <nav class="navbar navbar-expand-lg navbar-light bg-black">        
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="activities.html"><strong>Activities</strong></a>
-          <a class="nav-item nav-link" href="images.html"><strong>Gallery</strong></a>
+        <div class="navbar-nav bg-light-secondary">
+          <a class="nav-item nav-link text-center active" href="index.html"><strong>Home</strong> <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link text-center" href="activities.html"><strong>Activities</strong></a>
+          <a class="nav-item nav-link text-center" href="images.html"><strong>Gallery</strong></a>
         </div>
       </div>
     </nav>
